--- a/login.html
+++ b/login.html
@@ -7,6 +7,6 @@
 </head>
 <body>
   <h1>Login</h1>
-  <a href="/">Login with github</a>
+  <a href="/auth/github">Login with github</a>
 </body>
 </html>
